Campaign header date alignment bug fix

--- a/client/src/components/CampaignAndRecipe/CommonComponents/CampaignRecipeHeader/styles/style.css
+++ b/client/src/components/CampaignAndRecipe/CommonComponents/CampaignRecipeHeader/styles/style.css
@@ -20,7 +20,10 @@
   grid-row-gap: 4px;
   padding: 10px 50px 10px 40px;
 }
-
+.grid-date-container {
+  display: flex;
+  align-items: center;
+}
 .grid-textarea-container {
   display: flex;
   justify-content: center;
